feat: Flink SQL demo